--- a/style.css
+++ b/style.css
@@ -41,7 +41,8 @@ nav a:hover {
 /* Bố cục phần nội dung */
 main {
   grid-column: 1 / span 3;
-  padding: 20px;
+  width: 100%;
+  height: 100%;
   background-color: white;
 }
 
@@ -261,6 +262,8 @@ footer a:hover {
   display: flex;
   flex-direction: column;
   gap: 30px;
+  grid-column: span 2/ span 2;
+  grid-row: span 2/span 2;
 }
 
 .news-today p, .news-yesterday p{
@@ -321,7 +324,10 @@ main {
   color: #222;
 }
 
-.infor-news h4 {
+
+
+
+/* .infor-news h4 {
   margin-top: 15px;
   font-weight: 700;
 }
@@ -363,7 +369,7 @@ main {
 .news-block .game-title {
   font-weight: bold;
   color: #555;
-}
+} */
 
 @media (min-width: 768px) {
   .news-items {
@@ -376,3 +382,35 @@ main {
   }
 }
 
+.name-author, a{
+  opacity: 80%;
+  text-decoration: none ;
+  color: black;
+}
+
+time{
+  font-weight: bold;
+}
+
+.infor-news .name-author{
+  font-weight: bold;
+  opacity: 100%;
+  
+}
+
+.news-today, .news-yesterday{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  align-items: center;
+}
+
+.text-content{
+  grid-column: span 1/span 1;
+ 
+}
+
+.nav-link.active{
+  pointer-events: none;
+  text-shadow: 0 0 1em rgb(255, 255, 255);
+}
